--- a/specs.html
+++ b/specs.html
@@ -1,18 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Product Specification</title>
-    <link rel="stylesheet" href="specs.css">
+    <link rel="stylesheet" href="css/specs.css">
 </head>
-<body>
-    <div class="container" > 
 
-            <div class="first-div" >
-                    HI
+<body>
+
+    <section class="section-one">
+        <div class="heading">
+            <p>Xiaomi Electric Scooter 4 Pro.</p>
+
+        </div>
+        <div class="links">
+            <a href="/overview.html">Overview</a>
+            <a href="/specs.html">Specs</a>
+        </div>
+    </section>
+    <div class="container-two">
+        <section class="section-two">
+            <div class="dimension">
+                <h1>Dimensions</h1>
             </div>
+            <div class="section-two-img">
+                <img src="assets/section-two-img.jpg" alt="Scooter Image" loading="lazy" width="auto" height="auto">
+            </div>
+        </section>
+
+        <div class="section-two-caption">
+            <p>Dimension (Unfolded)</p>
+            <p>Dimension (Folded)</p>
+
+        </div>
+
+        <section class="section-third">
+
+
+            <div class="section-third-heading">
+                <h1>Basic Specs</h1>
+            </div>
+            <div class="section-third-detail">
+
+
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Product name</p>
+                    <p class="section-third-sub-detail">Xiaomi Electric Scooter 4 Pro</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Product model number</p>
+                    <p class="section-third-sub-detail">DDHBC20NEB</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Max. speed</p>
+                    <p class="section-third-sub-detail">25km/h (Max speed for each mode: Pedestrian mode: 6km/h; D:
+                        20km/h; S: 25km/h)</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">General Range</p>
+                    <p class="section-third-sub-detail">Approx. 55km</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head"></p>
+                    <p class="section-third-sub-detail">
+                        *Riding range will upgrade to 55km* by OTA
+                        which will be released in August.
+                        New firmware will optimize the efficiency of the
+                        motor to increase the riding range.</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Weight</p>
+                    <p class="section-third-sub-detail">17kg</p>
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Max. Climbing Angle</p>
+                    <p class="section-third-sub-detail">Approx. 20</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Braking</p>
+                    <p class="section-third-sub-detail">E-ABS regenerative anti-lock braking system
+                        Rear dual-pad disc brake</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Rated power</p>
+                    <p class="section-third-sub-detail">350W</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Max. power</p>
+                    <p class="section-third-sub-detail">700W</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Tires material</p>
+                    <p class="section-third-sub-detail">Natural rubber, synthetic rubber, resin + cord</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Max. load</p>
+                    <p class="section-third-sub-detail">120kg</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Rider height</p>
+                    <p class="section-third-sub-detail">120cm-200cm</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Rider age</p>
+                    <p class="section-third-sub-detail">Age 16-50</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Working temperature</p>
+                    <p class="section-third-sub-detail">-10°C ~ 40°C</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Storage temperature</p>
+                    <p class="section-third-sub-detail">20°C ~ 45°C</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">IP Rating</p>
+                    <p class="section-third-sub-detail">IPX4</p>
+
+                </div>
+                <div class="section-third-detail-one">
+
+                    <p class="section-third-sub-head">Charging time</p>
+                    <p class="section-third-sub-detail">Approx. 8–9 hours</p>
+
+                </div>
+            </div>
+
+        </section>
+        <section class="section-third">
+
+
+            <div class="section-third-heading">
+                <h1>Battery Specs</h1>
+            </div>
+            <div class="section-third-detail">
+
+
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Lithium ion battery</p>
+                    <p class="section-third-sub-detail"></p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Battery model</p>
+                    <p class="section-third-sub-detail">BCTA+71420-1701</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Rated capacity</p>
+                    <p class="section-third-sub-detail">12400mAh/ 446Wh</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Charging temperature range</p>
+                    <p class="section-third-sub-detail">0°C ~ + 40°C</p>
+                </div>
+
+
+        </section>
+        <section class="section-third">
+
+
+            <div class="section-third-heading">
+                <h1>Adapter Specs</h1>
+            </div>
+            <div class="section-third-detail">
+
+
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Output power</p>
+                    <p class="section-third-sub-detail">70W</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Input current</p>
+                    <p class="section-third-sub-detail">2A Max</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Rated Output</p>
+                    <p class="section-third-sub-detail">1.7A</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Input voltage</p>
+                    <p class="section-third-sub-detail">100-240VAC</p>
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-head">Max Output voltage</p>
+                    <p class="section-third-sub-detail">42VDC</p>
+                </div>
+
+        </section>
+        <section class="section-third">
+
+
+            <div class="section-third-heading">
+                <h1>Package Contents</h1>
+            </div>
+            <div class="section-third-detail">
+
+
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-detail">Xiaomi Electric Scooter 4 Pro ×1</p>
+
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-detail">Power adapter ×1</p>
+
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-detail">T-share Allen Wrench ×1</p>
+
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-detail">Extended nozzle adapter ×1</p>
+
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-detail">Screws ×5</p>
+
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-detail">User manual</p>
+
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-detail">Important information</p>
+
+                </div>
+                <div class="section-third-detail-one">
+                    <p class="section-third-sub-detail">Specifications</p>
+
+                </div>
+
+
+        </section>
 
     </div>
 </body>
+
 </html>
