--- a/overview.html
+++ b/overview.html
@@ -56,34 +56,34 @@
                     </div>
                     <div class="above-container-item-one">
                         <span>
-                           <h3> 55km*</h3>
+                           <h3> 25km/h</h3>
                         </span>
                         <span>
-                            <p>Super long range</p>
-                        </span>
-                    </div>
-                    <div class="above-container-item-one">
-                        <span>
-                           <h3> 55km*</h3>
-                        </span>
-                        <span>
-                            <p>Super long range</p>
+                            <p>Max. speed</p>
                         </span>
                     </div>
                     <div class="above-container-item-one">
                         <span>
-                           <h3> 55km*</h3>
+                           <h3> 700W</h3>
                         </span>
                         <span>
-                            <p>Super long range</p>
+                            <p>Max. power</p>
                         </span>
                     </div>
                     <div class="above-container-item-one">
                         <span>
-                           <h3> 55km*</h3>
+                           <h3> 20%</h3>
                         </span>
                         <span>
-                            <p>Super long range</p>
+                            <p>Incline climb*</p>
+                        </span>
+                    </div>
+                    <div class="above-container-item-one">
+                        <span>
+                           <h3> 130mm</h3>
+                        </span>
+                        <span>
+                            <p>Dual-disc brake</p>
                         </span>
                     </div>
 
@@ -616,17 +616,17 @@
                                                      Test conducted by Wuxi I-Reach Technology Co., Ltd.</span>
                                                     </div>
                                                     <div class="text-one">
-                                                        <span> Self-sealing tire road test: puncture the tire with five 3mm holes, set the tire pressure to 45psi. Then ride the scooter on concrete road, measure the tire pressure after every 500km, if the tire pressure is less than 25psi, pump the tire to 45psi. The result indicates that with five holes, the tire pressure only fall under 25psi after 1,700km of riding the scooter. Report number: NCZ-MAX-1906-266-1721.</span>
+                                                        <span> *Self-sealing tire road test: puncture the tire with five 3mm holes, set the tire pressure to 45psi. Then ride the scooter on concrete road, measure the tire pressure after every 500km, if the tire pressure is less than 25psi, pump the tire to 45psi. The result indicates that with five holes, the tire pressure only fall under 25psi after 1,700km of riding the scooter. Report number: NCZ-MAX-1906-266-1721.</span>
                                                             </div>
 
                                                             <div class="text-one">
-                                                                <span> All data and statistics, unless otherwise stated, were obtained from Ninebot labs. Actual results may vary based on differences in use conditions.</span>
+                                                                <span> *All data and statistics, unless otherwise stated, were obtained from Ninebot labs. Actual results may vary based on differences in use conditions.</span>
                                                                     </div>
                                                                     <div class="text-one">
-                                                                        <span>All data and statistics, unless otherwise stated, were obtained from Ninebot labs. Actual results may vary based on differences in use conditions </span>
+                                                                        <span>*All data and statistics, unless otherwise stated, were obtained from Ninebot labs. Actual results may vary based on differences in use conditions </span>
                                                                             </div>
                                                                             <div class="text-one">
-                                                                                <span> All images including but not limited to render pictures, animations, user interface on this page are for demonstration purposes only and may differ from actual product. </span>
+                                                                                <span> *All images including but not limited to render pictures, animations, user interface on this page are for demonstration purposes only and may differ from actual product. </span>
                                                                                     </div>
 
             </div>
